--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "tailwindcss": "^1.0.4"
+    "tailwindcss": "^1.0.4",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
